Creacion obtencion de score ok
